# breezy-desktop

./: .gitignore  .gitmodules  flake.nix
desktop/: CMakeLists.txt  main.c  pipewire.c  remote_desktop_inputs.c
desktop/include/: pipewire.h  remote_desktop_inputs.h  sdl.h
desktop/mutter/: remote_desktop.c  screen_cast.c
desktop/mutter/include/: mutter_remote_desktop.h  mutter_screen_cast.h
gnome/: Dockerfile  copy_libraries.sh
gnome/src/: IMUAdjust.frag  IMUAdjust.vert  extension.js  imu.js  xrEffect.js
ui/po/: it.po  zh_CN.po
